--- a/module3/3A_javascript/Lessons/index.html
+++ b/module3/3A_javascript/Lessons/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h2>Hello Kehinde</h2>
-    <script src="comparisonOperators.js"></script>
+    <script src="conditionalStatements.js"></script>
 </body>
 </html>
